4220 beadm mount of old BE with zones fails "Read only filesystem" 4235 beadm(1M) mount options undocumented in man page Reviewed by: Ilya Usvyatsky <ilya.usvyatsky@nexenta.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Approved by: Garrett D'Amore <garrett@damore.org>